# lpp_test

./: Dockerfile  pyproject.toml
.github/workflows/: docker.yml
docker/doxygen/: Doxyfile  doxygenjpext.sty  genPDF.sh  kit_footer.tex  kit_header.tex
lpp_collector/: __init__.py  config.py  consent.py  docker.py  dockerize.py  runner.py  uploader.py
lpp_collector/sel_client/: __init__.py
lpp_collector/sel_client/api/default/: delete_api_student_student_id.py  post_api_device_device_id.py  post_api_testresult_device_id.py
lpp_collector/sel_client/models/: __init__.py  device_grant_request.py  test_case_result_passed.py  test_result_request.py
lpp_collector/testcases/01test/: 00_tc_compile_test.py
lpp_collector/testcases/01test_ex/: 00_tc_compile_test.py
lpp_collector/testcases/02test/: 00_pp_compile_test.py  01_pp_run_test.py  02_pp_mm_test.py
lpp_collector/testcases/03test/: 00_cr_compile_test.py
lpp_collector/testcases/04test/: 00_mpplc_compile_test.py  01_mpplc_c2c2_run_test.py
lpp_collector/testcases/04test/test_expects/: sample036.mpl.stderr  sample037.mpl.stderr  sample42.csl.out
